--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^7.1.1",
     "axios": "^0.19.0",
     "commander": "^4.0.1",
     "dotenv": "^8.2.0",
-    "node-forge": "0.10.0",
+    "minimist": "^1.2.3",
+    "node-forge": "^0.10.0",
     "node-jose": "^1.1.3",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "yargs-parser": "^18.1.2"
+
   },
   "devDependencies": {
     "eslint": "^6.7.0",
